--- a/index.html
+++ b/index.html
@@ -2,8 +2,32 @@
 <html>
 <head>
   <title>Acme Quiz</title>
+  <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-<header><h1>Acme Quiz</h1></header>
+  <div class="container" >
+    <header><h1>Joe Dirt's Firework Stand</h1></header>
+    <div class="container">
+      <div class="navBar">
+        <div type="button"  class="btn btn-primary"></div>
+        <select>
+          <label for="">Please Select a Category</label>
+          <option id="cat" value="Category">Category</option>
+        </select>
+
+
+      </div>
+
+    </div>
+    
+    <div class="container-fluid grid" id="fwGrid">
+      <!-- contents will display here -->
+
+    </div>
+
+  </div>
+  <script src="/bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
+  <script src="load.js" type="text/javascript"></script>
 </body>
 </html>
