--- a/index.html
+++ b/index.html
@@ -6,27 +6,27 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  <div class="container" >
-    <header><h1>Joe Dirt's Firework Stand</h1></header>
-    <div class="container">
-      <div class="navBar">
-        <div type="button"  class="btn btn-primary"></div>
-        <select>
-          <label for="">Please Select a Category</label>
-          <option id="cat" value="Category">Category</option>
-        </select>
+    <div class="container" >
+      <header><h1>Joe Dirt's Firework Stand</h1></header>
+      <div class="container">
+        <div class="navBar">
 
+          <select id="cat" required>
+            <option disabled="true" selected="true">Please Select a Category</option>
+            <option value="1">Thing 1</option>
+            <option value="2">Thang 2</option>
+          </select>
+
+        </div>
 
       </div>
+      
+        <div class="container-fluid grid" id="fwGrid">
+        <!-- contents will display here -->
+
+        </div>
 
     </div>
-    
-    <div class="container-fluid grid" id="fwGrid">
-      <!-- contents will display here -->
-
-    </div>
-
-  </div>
   <script src="/bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
   <script src="load.js" type="text/javascript"></script>
 </body>
