--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
       </div>
-      
+
         <div class="container-fluid grid" id="fwGrid">
         <!-- contents will display here -->
 
@@ -28,6 +28,7 @@
 
     </div>
   <script src="/bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
-  <script src="load.js" type="text/javascript"></script>
+  <script src="../js/load.js" type="text/javascript"></script>
+  <script src="../js/display.js" type="text/javascript"></script>
 </body>
 </html>
