--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
   <script src="bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="../js/load.js" type="text/javascript"></script>
-  <script src="../js/display.js" type="text/javascript"></script>
+  <script src="js/load.js" type="text/javascript"></script>
+  <script src="js/display.js" type="text/javascript"></script>
 </body>
 </html>
